--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="transparente">#00FFFFFF</color>
     <color name="azul">#1A87DD</color>
     <color name="beige">#F3F4F5</color>
+    <color name="grey_green">#B4CA70</color>
 </resources>
