--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -6,19 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/alke_blue">
 
-    <TextView
-        android:id="@+id/logo_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="10dp"
-        android:fontFamily="@font/jua"
-        android:text="@string/alke_wallet"
-        android:textColor="@color/white"
-        android:textSize="21sp"
-        app:drawableTopCompat="@drawable/logo"
+
+    <ImageView
+        android:id="@+id/splash_image"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:src="@drawable/avd_alke"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
